Fix whitespace bugs with document translator

--- a/Tovik/Domains/DomainInfo.razor.css
+++ b/Tovik/Domains/DomainInfo.razor.css
@@ -36,6 +36,13 @@ h1 {
     }
 }
 
+.delete-exempt-btn {
+    color: white;
+    background: transparent;
+    padding: 4px;
+    border: none;
+}
+
 .slider {
     position: absolute;
     cursor: pointer;
